fixed additional overflow

--- a/src/scss/blocks/additional.scss
+++ b/src/scss/blocks/additional.scss
@@ -1,5 +1,6 @@
 .additional {
 	padding: 20px;
+	overflow: hidden;
 
 	background-color: $white-color;
 	border-radius: 10px;
